--- a/gaming/style1.css
+++ b/gaming/style1.css
@@ -2,12 +2,6 @@ body {
     margin: 0;
     padding: 0;
 }
-.img
-{
-    background-image: url("/gaming/banner-bg.jpg");
-    height:60pc;
-    border-radius: 0px 0px 150px 150px;
-}
 .header {
     padding:50px;
     display: flex;
@@ -57,11 +51,13 @@ body {
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #0071f8;
+    height: 28pc;
     border-radius: 0px 0px 150px 150px;
 }
 .div1
 {
-    padding: 90px 0px 90px 0px;
+    padding: 50px 0px 50px 0px;
     font-family: sans-serif;
     color: white;
     text-align: center;
@@ -74,21 +70,24 @@ body {
 {
     font-size: 16px;
 }
-.div2
-{
+
+.div2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-} 
-.div3
-{
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top:8pc;
+    margin-bottom: 10pc;
+}
+.div3 {
     background-color: #f7f7f7;
     font-family: sans-serif;
     border-radius: 25px;
     padding: 60px;
-    width:30%;
-    margin-right: 600px;
-} 
+    margin-left: 5pc;
+    margin-top: 5pc;
+    height:31.3pc;
+}
 .div3 h6
 {
     font-size: 15px;
@@ -102,15 +101,113 @@ body {
 {
     font-size: 14px;
     color: #4a4a4a;
+    margin-bottom: 50px;
+}
+.div3 span
+{
+    font-size: 14px;
+    font-weight: 600;
+    color: #4a4a4a;
+}
+.div3 ul li
+{
+    display: block;
+    font-size: 16px;
+    color: #aaaaaa;
+    margin-bottom: 30px;
+}
+.div3 ul li span
+{
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    color: #4a4a4a;
+    margin-bottom: 5px;
+}
+.div3 ul
+{
+    margin-left: -2.5pc;
 }
 .div4
 {
-    position: absolute;
-    padding-left: 40pc;
+    margin-right: 5pc;
 }
-.div4 iframe
-{
+.div4 iframe {
     border-radius: 35px;
     width: 500px;
     height: 300px;
+}
+.div4 input
+{
+    width: 38%;
+    height: 50px;
+    border-radius: 25px;
+    padding: 0px 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #e7e7e7;
+    font-size: 14px;
+    color: #4a4a4a;
+    margin-bottom: 30px;
+}
+.div4 #surname
+{
+    margin-left: 2pc;
+}
+.div4 #subject
+{
+    margin-left: 2pc;
+}
+.div4 textarea
+{
+    width: 92%;
+    height: 130px;
+    border-radius: 25px;
+    padding: 20px 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #e7e7e7;
+    font-size: 14px;
+    color: #4a4a4a;
+    margin-bottom: 30px;
+}
+.div4 button
+{
+    font-family: sans-serif;
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    background-color: #ee626b;
+    color: #fff;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 0px 25px;
+    border: none;
+    border-radius: 25px;
+}
+.div4 button:hover
+{
+    background-color: #0071f8;
+    cursor: pointer;
+}
+footer
+{
+    background-image: url("/gaming/footer-bg.jpg");
+    background-color: #0071f8;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 150px;
+    border-radius: 150px 150px 0px 0px;
+    font-family: sans-serif;
+}
+footer p {
+    text-align: center;
+    line-height: 90px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+}
+footer p a
+{
+    text-decoration: none;
+    color: white;
 }
