--- a/gaming/style2.css
+++ b/gaming/style2.css
@@ -123,3 +123,22 @@ body {
     float: left;
     margin-right: 15px;
 }
+.div4 button
+{
+    display: inline-block;
+    height: 50px;
+    line-height: 50px;
+    background-color: #ee626b;
+    color: #fff;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 0px 25px;
+    border: none;
+    border-radius: 25px;
+}
+.div4 button:hover
+{
+    background-color: #0071f8;
+    cursor: pointer;
+}
